--- a/Example/Sources/Controllers/TabBar/TabBarController.storyboard
+++ b/Example/Sources/Controllers/TabBar/TabBarController.storyboard
@@ -9,16 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--VerticalViewController-->
-        <scene sceneID="3IW-pN-ALz">
-            <objects>
-                <viewControllerPlaceholder storyboardName="VerticalViewController" id="6qG-TM-xhM" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="ftt-wW-WMQ"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Wz5-WX-Xx4" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1217" y="381"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ImI-Ns-XVw">
             <objects>
@@ -30,7 +20,6 @@
                     </tabBar>
                     <connections>
                         <segue destination="XjC-df-ibL" kind="relationship" relationship="viewControllers" id="hYc-Q8-iAj"/>
-                        <segue destination="zQr-dc-Fj5" kind="relationship" relationship="viewControllers" id="KzT-uU-HVj"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9UM-p2-BMl" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -54,36 +43,17 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="prE-UA-Ff4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="532.79999999999995" y="-283.35832083958024"/>
+            <point key="canvasLocation" x="393" y="48"/>
         </scene>
-        <!--Item 2-->
-        <scene sceneID="GeB-ws-xdn">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zQr-dc-Fj5" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 2" id="Ykj-x5-frX"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sfC-J0-p6E">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="6qG-TM-xhM" kind="relationship" relationship="rootViewController" id="MfK-3L-nma"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lVS-5e-4Zg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="532.79999999999995" y="381.40929535232385"/>
-        </scene>
-        <!--HorizontalViewController-->
+        <!--NaoViewController-->
         <scene sceneID="AgP-dy-M3O">
             <objects>
-                <viewControllerPlaceholder storyboardName="HorizontalViewController" id="iz6-ZK-C4p" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="NaoViewController" id="iz6-ZK-C4p" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="kCA-eD-6sm"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wXj-T3-xsR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1217" y="-284"/>
+            <point key="canvasLocation" x="1049" y="48"/>
         </scene>
     </scenes>
 </document>
