--- a/Example/Sources/Controllers/Web/WebViewController.storyboard
+++ b/Example/Sources/Controllers/Web/WebViewController.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Detail View Controller-->
+        <!--Web View Controller-->
         <scene sceneID="Xi5-Et-wWL">
             <objects>
-                <viewController storyboardIdentifier="DetailViewController" id="PSR-Ho-G0h" customClass="DetailViewController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewController" id="PSR-Ho-G0h" customClass="WebViewController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CGe-yF-HqV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
