--- a/Example/Sources/Controllers/Menu/MenuViewController.storyboard
+++ b/Example/Sources/Controllers/Menu/MenuViewController.storyboard
@@ -17,13 +17,30 @@
                     <view key="view" contentMode="scaleToFill" id="dKh-o5-Ezg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Yb-jj-SLq" customClass="SwipeMenuView" customModule="Example" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8Yb-jj-SLq" firstAttribute="trailing" secondItem="xDf-eO-Vwj" secondAttribute="trailing" id="56c-Wn-WTZ"/>
+                            <constraint firstItem="8Yb-jj-SLq" firstAttribute="bottom" secondItem="xDf-eO-Vwj" secondAttribute="bottom" id="DbG-aC-lqr"/>
+                            <constraint firstItem="8Yb-jj-SLq" firstAttribute="top" secondItem="xDf-eO-Vwj" secondAttribute="top" id="I6M-rN-OUw"/>
+                            <constraint firstItem="8Yb-jj-SLq" firstAttribute="leading" secondItem="xDf-eO-Vwj" secondAttribute="leading" id="jOV-wE-ito"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="xDf-eO-Vwj"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="swipeMenuView" destination="8Yb-jj-SLq" id="Z8H-wH-RdW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rbP-E3-raN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1" y="107"/>
+            <point key="canvasLocation" x="-272.80000000000001" y="84.107946026986511"/>
         </scene>
     </scenes>
 </document>
