support toolBar to tabBar adjust origin

--- a/Example/Sources/Controllers/TabBar/TabBarController.storyboard
+++ b/Example/Sources/Controllers/TabBar/TabBarController.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -28,7 +29,7 @@
         <!--Item 1-->
         <scene sceneID="KiC-Ci-Tj0">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XjC-df-ibL" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XjC-df-ibL" customClass="NavigationController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item 1" id="jVp-w0-WEu"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="faU-hx-3rE">
