--- a/Example/Sources/Controllers/Second/SecondViewController.storyboard
+++ b/Example/Sources/Controllers/Second/SecondViewController.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,13 +17,24 @@
                     <view key="view" contentMode="scaleToFill" id="CGe-yF-HqV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zJH-OA-cdg">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items/>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zJH-OA-cdg" firstAttribute="trailing" secondItem="CGe-yF-HqV" secondAttribute="trailing" id="0Ux-Uz-81a"/>
+                            <constraint firstItem="zJH-OA-cdg" firstAttribute="bottom" secondItem="3ch-i4-7Wj" secondAttribute="bottom" id="ZJ0-Hz-Xut"/>
+                            <constraint firstItem="zJH-OA-cdg" firstAttribute="leading" secondItem="CGe-yF-HqV" secondAttribute="leading" id="ZiV-iG-pzK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="3ch-i4-7Wj"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dCj-PF-97f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="62" y="180"/>
+            <point key="canvasLocation" x="-193" y="172"/>
         </scene>
     </scenes>
 </document>
